--- a/Gastro.html
+++ b/Gastro.html
@@ -15,69 +15,10 @@
     <meta content="summary_large_image" name="twitter:card" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap"
-      rel="stylesheet"
-    />
-    <link
       href="css/boldmark.webflow.6428ad051.css"
       rel="stylesheet"
       type="text/css"
     />
-    <style>
-      body {
-        background-color: #121212;
-        color: #fff;
-        font-family: sans-serif;
-        text-align: center; 
-      }
-
-      .tabs { 
-        margin: auto;
-        width: 80%;
-        justify-content: center;
-        margin-bottom: 20px;
-      }
-
-      .tab {
-        background-color: #2c2c2c;
-        color: #bbb;
-        padding: 12px 24px;
-        margin: 0 5px;
-        border: 1px solid #444;
-        border-radius: 6px;
-        cursor: pointer;
-        transition: 0.3s;
-        margin-top: 10px;
-      }
-
-      .tab:hover {
-        background-color: #3a3a3a;
-        color: #fff;
-      }
-
-      .tab.active {
-        background-color: #1e1e1e;
-        font-weight: bold;
-      }
-
-      .content {
-        display: none;
-        padding: 10px;
-      }
-
-      .video-section p {
-        font-family: "Great Vibes", cursive;
-        font-size: 2rem;
-        color: #fff;
-        margin-bottom: 1rem;
-        font-weight: normal;
-      }
-
-      .content.active {
-        display: block;
-      }
-    </style>
-
     <script type="text/javascript">
       !(function (o, c) {
         var n = c.documentElement,
@@ -293,18 +234,11 @@
         <header
           class="section-home-header flex items-center justify-center min-h-screen relative"
         >
-          <video
-            autoplay
-            loop
-            muted
-            playsinline
-            class="absolute   inset-0 w-full h-full object-cover sm:h-[100vh] "
-          >
-            <source
-              src="/images/Wendding/Casamento Gabi e Leo (1).mp4"
-              type="video/mp4"
-            />
-          </video>
+          <img
+            class="absolute inset-0 w-full h-full object-cover sm:h-[100vh]"
+            src="/images/Gastro/DSC06902.jpg"
+          />
+          <img />
           <div
             id="w-node-_0500aca7-7364-6e7a-e315-bfed541284fe-b697c240"
             class="heading-wrapper text-center pt-[60%] sm:pt-[15%]"
@@ -312,178 +246,157 @@
             <h1
               class="text-7xl sm:text-8xl font-serif font-semibold drop-shadow-lg text-white new"
             >
-              Casamento
+              Gastronomia
             </h1>
 
             <div class="mt-4 w-full">
               <p class="mt-4 text-lg text-white text-center">
-                Nós compartilhamos memórias <br />
-                com quem amamos para vida toda
+                Criamos experiências visuais que elevam sua presença ao
+                extraordinário.
               </p>
             </div>
           </div>
-        </header> 
-        <div class="tabs  ">
-          <p class="pt-[100px] ">Menu</p>
-          <div class="tab active " onclick="showTab('video')">Gravações</div>
-          <div class="tab " onclick="showTab('imagem')">Ensaios fotográficos</div>
-        </div> 
-        <div id="video" class="content active">
+        </header>
+        <section class="bg-neutral-900 px-6 py-16 text-start text-gray-100">
+          <div class="max-w-5xl mx-auto space-y-10 sm:flex"></div>
           <div
-            class="sm:w-[70%] w-[80%] text-center h-[20vh] sm:h-[80vh] mb-20 m-auto p-2 video-section"
+            class="max-w-5xl mx-auto space-y-10 sm:flex justify-between sm:w-[100%]"
           >
-            <p
-              class="text-white text-xl sm:text-2xl font-semibold tracking-wide mb-4"
+            <div
+              class="overflow-hidden shadow-[0_25px_50px_rgba(0,0,0,0.6)] sm:h-[60vh] sm:w-[100%]"
             >
-              Cris & Miriã
-            </p><iframe src="https://drive.google.com/file/d/17gs4IQeWtQnzgiSQvRHLPXhvA9Sh7y7D/preview" width="100%" height="100%" allow="autoplay"></iframe>
-           
-          </div>
-          <div
-            class="sm:w-[70%] w-[80%] text-center h-[20vh] sm:h-[80vh] mb-20 m-auto p-2 video-section"
-          >
-            <p
-              class="text-white text-xl sm:text-2xl font-semibold tracking-wide mb-4"
-            >
-              Leo & Ju
-            </p>
-             <iframe
-              src="https://drive.google.com/file/d/1WmKKGQrY0z6edpWawdvz27QUZLH2lxcd/preview"
-              width="100%"
-              height="100%"
-              allow="autoplay"
-            ></iframe>
-          </div>
-          <div
-            class="sm:w-[70%] w-[80%] text-center h-[20vh] sm:h-[80vh] mb-20 m-auto p-2 video-section"
-          >
-            <p
-              class="text-white text-xl sm:text-2xl font-semibold tracking-wide mb-4"
-            >
-              Doglas & Jeh
-            </p>
-            <iframe src="https://drive.google.com/file/d/1N30cHF4uzMMKO2B6DfA6ZxFLii_kT1gw/preview" width="100%" height="100%" allow="autoplay"></iframe>
-          </div>
-          <div
-            class="sm:w-[70%] w-[80%] text-center h-[20vh] sm:h-[80vh] mb-20 m-auto p-2 video-section"
-          >
-            <p
-              class="text-white text-xl sm:text-2xl font-semibold tracking-wide mb-4"
-            >
-              Dudu & Ana
-            </p>
-            <iframe src="https://drive.google.com/file/d/1y02SRH8h8ecDAxrhWPoXOGd_DY-hrRCh/preview" width="100%" height="100%" allow="autoplay"></iframe>
-          </div>
-           <div
-            class="sm:w-[70%] w-[80%] text-center h-[20vh] sm:h-[80vh] mb-40 m-auto p-2 video-section"
-          >
-            <p
-              class="text-white text-xl sm:text-2xl font-semibold tracking-wide mb-4"
-            >
-              Gabi & Leo
-            </p>
-              <iframe src="https://drive.google.com/file/d/125POYPHb0DpljZMKbrNNFrkI1JoeEeIX/preview" width="100%" height="100%" allow="autoplay"></iframe>
-          </div>
-        </div> 
-        </div>  
-        <div id="imagem" class="content">
-          <section class="bg-neutral-900 p-4 text-center">
-            <div class="video-section">
-              <p
-                class="text-white text-xl sm:text-2xl font-semibold tracking-wide mb-4 mt-8"
+              <video
+                class="w-full h-full object-cover"
+                autoplay
+                muted
+                loop
+                playsinline
               >
-                Ensaios fotográfico
-              </p>
+                <source
+                  src="images/Gastro/VIDEO 6 INTERAÇÕES.mp4"
+                  type="video/mp4"
+                />
+              </video>
             </div>
-
-            <section
-              class="flex flex-wrap justify-center items-center gap-5 w-full px-4 py-10"
+            <div
+              class="overflow-hidden shadow-[0_25px_50px_rgba(0,0,0,0.6)] sm:h-[60vh] sm:w-[100%]"
             >
-              <img
-                class="home-about-us-photo-1 w-full sm:w-[32%] object-cover filter grayscale"
-                src="images/Wendding/_HAP0701.jpg"
-                alt="about section"
-                loading="lazy"
-              />
-              <img
-                class="home-about-us-photo-1 w-full sm:w-[32%] object-cover filter grayscale"
-                src="images/Wendding/_HAP0696.jpg"
-                alt="about section"
-                loading="lazy"
-              />
-              <img
-                class="home-about-us-photo-1 w-full sm:w-[32%] object-cover filter grayscale"
-                src="images/Wendding/DMSP9373.jpg"
-                alt="about section"
-                loading="lazy"
-              />
-            </section>
-
-            <section
-              class="flex flex-wrap justify-center items-center gap-5 w-full px-4 py-10"
+              <video
+                class="w-full h-full object-cover"
+                autoplay
+                muted
+                loop
+                playsinline
+              >
+                <source src="images/Gastro/IMG_9216.MP4" type="video/mp4" />
+              </video>
+            </div>
+            <div
+              class="overflow-hidden shadow-[0_25px_50px_rgba(0,0,0,0.6)] sm:h-[60vh] sm:w-[100%]"
             >
-              <img
-                class="home-about-us-photo-1 w-full sm:w-[32%] object-top"
-                src="images/Wendding/_HAP0778.jpg"
-                alt="about section"
-                loading="lazy"
-              /><img
-                class="home-about-us-photo-1 w-full sm:w-[32%] object-cover"
-                src="images/Wendding/_HAP0722.jpg"
-              />
-              <img
-                class="home-about-us-photo-1 w-full sm:w-[32%] object-cover"
-                src="images/Wendding/_HAP0780.jpg"
-              />
-            </section>
-
-            <section
-              class="flex flex-wrap justify-center items-center gap-5 w-full px-4 py-10"
-            >
-              <img
-                class="home-about-us-photo-1 w-full sm:w-[32%] object-cover filter grayscale"
-                src="images/Wendding/_HAP0784.jpg"
-                alt="about section"
-                loading="lazy"
-              />
-              <img
-                class="home-about-us-photo-1 w-full sm:w-[32%] object-cover filter grayscale"
-                src="images/Wendding/_HAP1175.jpg"
-                alt="about section"
-                loading="lazy"
-              />
-              <img
-                class="home-about-us-photo-1 w-full sm:w-[32%] object-cover filter grayscale"
-                src="images/Wendding/DMSP8506.jpg"
-                alt="about section"
-                loading="lazy"
-              />
-            </section>
-
-            <section
-              class="flex flex-wrap justify-center items-center gap-5 w-full px-4 py-10"
-            >
-              <img
-                class="home-about-us-photo-1 w-full sm:w-[32%] object-cover"
-                src="images/Wendding/DMSP9263.jpg"
-                alt="about section"
-                loading="lazy"
-              />
-              <img
-                class="home-about-us-photo-1 w-full sm:w-[32%] object-cover"
-                src="images/Wendding/DMSP9185.jpg"
-                alt="about section"
-                loading="lazy"
-              />
-              <img
-                class="home-about-us-photo-1 w-full sm:w-[32%] object-cover"
-                src="images/Wendding/DMSP9114.jpg"
-                alt="about section"
-                loading="lazy"
-              />
-            </section>
+              <video
+                class="w-full h-full object-cover"
+                autoplay
+                muted
+                loop
+                playsinline
+              >
+                <source src="images/Gastro/IMG_8415.MP4" type="video/mp4" />
+              </video>
+            </div>
+          </div>
+        </section>
+        <section class="bg-neutral-900 p-4 text-center">
+          <section
+            class="flex flex-wrap justify-center items-center gap-5 w-full px-4 py-10"
+          >
+            <img
+              class="w-full sm:w-[32%] object-cover"
+              src="images/Corporate/DSC06767.jpg"
+              alt="about section"
+              loading="lazy"
+            />
+            <img
+              class="w-full sm:w-[32%] object-top"
+              src="images/Corporate/DSC06778.jpg"
+              alt="about section"
+              loading="lazy"
+            />
+            <img
+              class="w-full sm:w-[32%] object-cover"
+              src="images/Corporate/DSC06788.jpg"
+              alt="about section"
+              loading="lazy"
+            />
           </section>
-        </div> 
+          <section
+            class="flex flex-wrap justify-center items-center gap-5 w-full px-4 py-10"
+          >
+            <img
+              class="w-full sm:w-[32%] object-cover"
+              src="images/Gastro/IMG_8159.jpg"
+              alt="about section"
+              loading="lazy"
+            />
+            <img
+              class="w-full sm:w-[32%] object-cover"
+              src="images/Gastro/IMG_0283.jpg"
+              alt="about section"
+              loading="lazy"
+            />
+            <img
+              class="w-full sm:w-[32%] object-cover"
+              src="images/Gastro/IMG_0282.jpg"
+              alt="about section"
+              loading="lazy"
+            />
+          </section>
+          <section
+            class="flex flex-wrap justify-center items-center gap-5 w-full px-4 py-10"
+          >
+            <img
+              class="w-full sm:w-[32%] object-cover"
+              src="images/Gastro/IMG_9848.jpg"
+              alt="about section"
+              loading="lazy"
+            />
+            <img
+              class="w-full sm:w-[32%] object-cover"
+              src="images/Gastro/IMG_0576.jpg"
+              alt="about section"
+              loading="lazy"
+            />
+            <img
+              class="w-full sm:w-[32%] object-cover"
+              src="images/Gastro/IMG_8863.JPEG.jpg"
+              alt="about section"
+              loading="lazy"
+            />
+          </section>
+
+          <section
+            class="flex flex-wrap justify-center items-center gap-5 w-full px-4 py-10"
+          >
+            <img
+              class="w-full sm:w-[32%] object-cover"
+              src="images/Corporate/WEL01227.jpg"
+              alt="about section"
+              loading="lazy"
+            />
+            <img
+              class="w-full sm:w-[32%] object-cover"
+              src="images/Corporate/WEL01276.jpg"
+              alt="about section"
+              loading="lazy"
+            />
+            <img
+              class="w-full sm:w-[32%] object-cover"
+              src="images/Corporate/WEL01359.jpg"
+              alt="about section"
+              loading="lazy"
+            />
+          </section>
+        </section>
         <section>
           <div class="cta-sticky">
             <div class="cta-container">
@@ -567,12 +480,38 @@
               Navegue
             </p>
             <ul class="text-sm space-y-2 text-gray-400">
-                    <li><a href="/Corporativo.html" class="hover:text-cyan-400 transition">Corporativos</a></li>
-                    <li><a href="/debutantes.html" class="hover:text-cyan-400 transition">Debutantes</a></li>
-                    <li><a href="/casamentos.html" class="hover:text-cyan-400 transition">Casamentos</a></li>
-                    <li><a href="/Formatura.html" class="hover:text-cyan-400 transition">Formaturas</a></li>
-                    <li><a href="/Gastro.html" class="hover:text-cyan-400 transition">Gastronomia</a></li>
-                </ul>
+              <li>
+                <a
+                  href="/Corporativo.html"
+                  class="hover:text-cyan-400 transition"
+                  >Corporativos</a
+                >
+              </li>
+              <li>
+                <a
+                  href="/debutantes.html"
+                  class="hover:text-cyan-400 transition"
+                  >Debutantes</a
+                >
+              </li>
+              <li>
+                <a
+                  href="/casamentos.html"
+                  class="hover:text-cyan-400 transition"
+                  >Casamentos</a
+                >
+              </li>
+              <li>
+                <a href="/Formatura.html" class="hover:text-cyan-400 transition"
+                  >Formaturas</a
+                >
+              </li>
+              <li>
+                <a href="/Gastro.html" class="hover:text-cyan-400 transition"
+                  >Gastronomia</a
+                >
+              </li>
+            </ul>
           </div>
 
           <!-- Redes sociais -->
@@ -617,21 +556,6 @@
         </div>
       </footer>
     </div>
-
-    <script>
-      function showTab(tabId) {
-        const tabs = document.querySelectorAll(".tab");
-        const contents = document.querySelectorAll(".content");
-
-        tabs.forEach((tab) => tab.classList.remove("active"));
-        contents.forEach((content) => content.classList.remove("active"));
-
-        document
-          .querySelector(`.tab[onclick*="${tabId}"]`)
-          .classList.add("active");
-        document.getElementById(tabId).classList.add("active");
-      }
-    </script>
 
     <script
       src="js/jquery-3.5.1.min.dc5e7f18c8.js"
