--- a/debutantes.html
+++ b/debutantes.html
@@ -140,7 +140,10 @@
                         </div>
                       </a>
                     </div>
-                    <div class="nav-link-overflow">
+                   
+                  </div>
+                  <div class="right-nav-menu">
+                     <div class="nav-link-overflow">
                       <a
                         data-w-id="447c377d-665e-86f8-6f59-d53410cb7826"
                         href="/Wendding.html"
@@ -176,8 +179,6 @@
                           </div></div
                       ></a>
                     </div>
-                  </div>
-                  <div class="right-nav-menu">
                     <div class="nav-link-overflow">
                       <a
                         data-w-id="daa00ff8-a6e1-462b-6ef1-24137d7288f6"
@@ -204,6 +205,24 @@
                         ><div class="nav-link-block">
                           <div class="nav-text">Formaturas</div>
                           <div class="nav-text is-hover">Formaturas</div>
+                        </div>
+                        <div class="link-underline-wrapper">
+                          <div class="link-underline-item">
+                            <div class="left-underline"></div>
+                          </div>
+                          <div class="link-underline-item">
+                            <div class="right-underline"></div>
+                          </div></div
+                      ></a>
+                    </div>
+                    <div class="nav-link-overflow">
+                      <a
+                        data-w-id="b80e4bcc-650d-950d-9821-7930fbb222bc"
+                        href="/Gastro.html"
+                        class="nav-link w-inline-block"
+                        ><div class="nav-link-block">
+                          <div class="nav-text">Gastronomia</div>
+                          <div class="nav-text is-hover">Gastronomia</div>
                         </div>
                         <div class="link-underline-wrapper">
                           <div class="link-underline-item">
@@ -527,7 +546,7 @@
             <p class="text-base font-medium uppercase tracking-wider">
               Navegue
             </p>
-            <ul class="text-sm space-y-2 text-gray-400">
+          <ul class="text-sm space-y-2 text-gray-400">
               <li>
                 <a
                   href="/Corporativo.html"
@@ -552,6 +571,11 @@
               <li>
                 <a href="/Formatura.html" class="hover:text-cyan-400 transition"
                   >Formaturas</a
+                >
+              </li>
+              <li>
+                <a href="/Gastro.html" class="hover:text-cyan-400 transition"
+                  >Gastronomia</a
                 >
               </li>
             </ul>
