--- a/Corporativo.html
+++ b/Corporativo.html
@@ -82,6 +82,8 @@
                         </div>
                       </a>
                     </div>
+                  </div>
+                  <div class="right-nav-menu">
                     <div class="nav-link-overflow">
                       <a
                         data-w-id="447c377d-665e-86f8-6f59-d53410cb7826"
@@ -118,8 +120,6 @@
                           </div></div
                       ></a>
                     </div>
-                  </div>
-                  <div class="right-nav-menu">
                     <div class="nav-link-overflow">
                       <a
                         data-w-id="daa00ff8-a6e1-462b-6ef1-24137d7288f6"
@@ -146,6 +146,24 @@
                         ><div class="nav-link-block">
                           <div class="nav-text">Formaturas</div>
                           <div class="nav-text is-hover">Formaturas</div>
+                        </div>
+                        <div class="link-underline-wrapper">
+                          <div class="link-underline-item">
+                            <div class="left-underline"></div>
+                          </div>
+                          <div class="link-underline-item">
+                            <div class="right-underline"></div>
+                          </div></div
+                      ></a>
+                    </div>
+                    <div class="nav-link-overflow">
+                      <a
+                        data-w-id="b80e4bcc-650d-950d-9821-7930fbb222bc"
+                        href="/Gastro.html"
+                        class="nav-link w-inline-block"
+                        ><div class="nav-link-block">
+                          <div class="nav-text">Gastronomia</div>
+                          <div class="nav-text is-hover">Gastronomia</div>
                         </div>
                         <div class="link-underline-wrapper">
                           <div class="link-underline-item">
@@ -369,17 +387,25 @@
                   <div class="max-width-xlarge align-center"></div>
                   <div class="spacer-small"></div>
                 </div>
-                 <div class="bg-green-500"  >
-                     <a href="https://wa.me/5551999509578?text=Olá%20Voian%2C%20quero%20fazer%20um%20orçamento"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                        class="flex items-center gap-2 bg-green-500 text-white px-4 py-2 rounded-lg hover:bg-green-600 transition">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 fill-current" viewBox="0 0 32 32">
-                          <path d="M16.003 2.003c-7.732 0-14 6.268-14 14 0 2.472.648 4.84 1.88 6.94L2 30l7.26-1.88a13.93 13.93 0 006.743 1.72h.003c7.732 0 14-6.268 14-14s-6.268-14-14-14zm0 25.5a11.5 11.5 0 01-5.86-1.58l-.42-.25-4.31 1.11 1.15-4.2-.27-.43a11.47 11.47 0 01-1.77-6.1c0-6.34 5.16-11.5 11.5-11.5s11.5 5.16 11.5 11.5-5.16 11.5-11.5 11.5zm6.29-8.62c-.34-.17-2.01-.99-2.32-1.1-.31-.11-.54-.17-.77.17s-.89 1.1-1.09 1.33c-.2.23-.4.26-.74.09-.34-.17-1.43-.53-2.72-1.7-1.01-.9-1.69-2-1.89-2.34-.2-.34-.02-.52.15-.69.15-.15.34-.4.51-.6.17-.2.23-.34.34-.57.11-.23.06-.43-.03-.6-.09-.17-.77-1.86-1.06-2.55-.28-.68-.57-.59-.77-.6h-.66c-.23 0-.6.09-.91.43s-1.2 1.17-1.2 2.85 1.23 3.3 1.4 3.53c.17.23 2.42 3.7 5.87 5.19.82.35 1.46.56 1.96.72.82.26 1.57.22 2.16.13.66-.1 2.01-.82 2.3-1.61.28-.79.28-1.47.2-1.61-.09-.14-.31-.23-.66-.4z"/>
-                        </svg>
-                        Nós contate
-                      </a>
-                    </div>
+                <div class="bg-green-500">
+                  <a
+                    href="https://wa.me/5551999509578?text=Olá%20Voian%2C%20quero%20fazer%20um%20orçamento"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="flex items-center gap-2 bg-green-500 text-white px-4 py-2 rounded-lg hover:bg-green-600 transition"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="w-5 h-5 fill-current"
+                      viewBox="0 0 32 32"
+                    >
+                      <path
+                        d="M16.003 2.003c-7.732 0-14 6.268-14 14 0 2.472.648 4.84 1.88 6.94L2 30l7.26-1.88a13.93 13.93 0 006.743 1.72h.003c7.732 0 14-6.268 14-14s-6.268-14-14-14zm0 25.5a11.5 11.5 0 01-5.86-1.58l-.42-.25-4.31 1.11 1.15-4.2-.27-.43a11.47 11.47 0 01-1.77-6.1c0-6.34 5.16-11.5 11.5-11.5s11.5 5.16 11.5 11.5-5.16 11.5-11.5 11.5zm6.29-8.62c-.34-.17-2.01-.99-2.32-1.1-.31-.11-.54-.17-.77.17s-.89 1.1-1.09 1.33c-.2.23-.4.26-.74.09-.34-.17-1.43-.53-2.72-1.7-1.01-.9-1.69-2-1.89-2.34-.2-.34-.02-.52.15-.69.15-.15.34-.4.51-.6.17-.2.23-.34.34-.57.11-.23.06-.43-.03-.6-.09-.17-.77-1.86-1.06-2.55-.28-.68-.57-.59-.77-.6h-.66c-.23 0-.6.09-.91.43s-1.2 1.17-1.2 2.85 1.23 3.3 1.4 3.53c.17.23 2.42 3.7 5.87 5.19.82.35 1.46.56 1.96.72.82.26 1.57.22 2.16.13.66-.1 2.01-.82 2.3-1.61.28-.79.28-1.47.2-1.61-.09-.14-.31-.23-.66-.4z"
+                      />
+                    </svg>
+                    Nós contate
+                  </a>
+                </div>
               </div>
               <div class="cta-image-wrapper">
                 <img
@@ -444,6 +470,11 @@
               <li>
                 <a href="/Formatura.html" class="hover:text-cyan-400 transition"
                   >Formaturas</a
+                >
+              </li>
+              <li>
+                <a href="/Gastro.html" class="hover:text-cyan-400 transition"
+                  >Gastronomia</a
                 >
               </li>
             </ul>
