--- a/Formatura.html
+++ b/Formatura.html
@@ -83,7 +83,10 @@
                         </div>
                       </a>
                     </div>
-                    <div class="nav-link-overflow">
+                   
+                  </div>
+                  <div class="right-nav-menu">
+                     <div class="nav-link-overflow">
                       <a
                         data-w-id="447c377d-665e-86f8-6f59-d53410cb7826"
                         href="/Wendding.html"
@@ -119,8 +122,6 @@
                           </div></div
                       ></a>
                     </div>
-                  </div>
-                  <div class="right-nav-menu">
                     <div class="nav-link-overflow">
                       <a
                         data-w-id="daa00ff8-a6e1-462b-6ef1-24137d7288f6"
@@ -157,7 +158,25 @@
                           </div></div
                       ></a>
                     </div>
-                     <div class="nav-link-overflow">
+                    <div class="nav-link-overflow">
+                      <a
+                        data-w-id="b80e4bcc-650d-950d-9821-7930fbb222bc"
+                        href="/Gastro.html"
+                        class="nav-link w-inline-block"
+                        ><div class="nav-link-block">
+                          <div class="nav-text">Gastronomia</div>
+                          <div class="nav-text is-hover">Gastronomia</div>
+                        </div>
+                        <div class="link-underline-wrapper">
+                          <div class="link-underline-item">
+                            <div class="left-underline"></div>
+                          </div>
+                          <div class="link-underline-item">
+                            <div class="right-underline"></div>
+                          </div></div
+                      ></a>
+                    </div>
+                    <div class="nav-link-overflow">
                       <a
                         data-w-id="b80e4bcc-650d-950d-9821-7930fbb222bc"
                         href="https://wa.me/5551999509578?text=Ol%C3%A1%20Voian%2C%20Estou%20interessado%20em%20fazer%20um%20or%C3%A7amento."
@@ -174,7 +193,6 @@
                             <div class="right-underline"></div>
                           </div></div
                       ></a>
- 
                     </div>
                   </div>
                 </div>
@@ -220,7 +238,6 @@
           <video
             autoplay
             loop
-          
             playsinline
             class="absolute inset-0 w-full h-full object-cover sm:h-[100vh]"
           >
@@ -345,7 +362,7 @@
             <p class="text-base font-medium uppercase tracking-wider">
               Navegue
             </p>
-            <ul class="text-sm space-y-2 text-gray-400">
+           <ul class="text-sm space-y-2 text-gray-400">
               <li>
                 <a
                   href="/Corporativo.html"
@@ -370,6 +387,11 @@
               <li>
                 <a href="/Formatura.html" class="hover:text-cyan-400 transition"
                   >Formaturas</a
+                >
+              </li>
+              <li>
+                <a href="/Gastro.html" class="hover:text-cyan-400 transition"
+                  >Gastronomia</a
                 >
               </li>
             </ul>
