--- a/Gastro.html
+++ b/Gastro.html
@@ -301,7 +301,7 @@
                 loop
                 playsinline
               >
-                <source src="images/Gastro/IMG_8415.MP4" type="video/MP4" />
+                <source src="images/Gastro/IMG_8415.mp4" type="video/mp4" />
               </video>
             </div>
           </div>
