--- a/Gastro.html
+++ b/Gastro.html
@@ -236,7 +236,7 @@
         >
           <img
             class="absolute inset-0 w-full h-full object-cover sm:h-[100vh]"
-            src="/images/Gastro/DSC06902.jpg"
+            src="/images/Gastro/IMG_8171.jpg"
           />
           <img />
           <div
@@ -250,7 +250,7 @@
             </h1>
 
             <div class="mt-4 w-full">
-              <p class="mt-4 text-lg text-white text-center">
+              <p class="mt-4 text-lg  text-center ">
                 Criamos experiências visuais que elevam sua presença ao
                 extraordinário.
               </p>
@@ -291,19 +291,7 @@
                 <source src="images/Gastro/IMG_9216.mp4" type="video/mp4" />
               </video>
             </div>
-            <div
-              class="overflow-hidden shadow-[0_25px_50px_rgba(0,0,0,0.6)] sm:h-[60vh] sm:w-[100%]"
-            >
-              <video
-                class="w-full h-full object-cover"
-                autoplay
-                muted
-                loop
-                playsinline
-              >
-                <source src="images/Gastro/IMG_8415.mp4" type="video/mp4" />
-              </video>
-            </div>
+             
           </div>
         </section>
         <section class="bg-neutral-900 p-4 text-center">
