--- a/debutantes.html
+++ b/debutantes.html
@@ -68,7 +68,7 @@
       .video-section p {
         font-family: "Great Vibes", cursive;
         font-size: 2rem;
-        color: #fff;
+        color: #000000;
         margin-bottom: 1rem;
         font-weight: normal;
       }
@@ -329,12 +329,12 @@
           <div class="tab active " onclick="showTab('video')">Gravações</div>
           <div class="tab " onclick="showTab('imagem')">Ensaios fotográficos</div>
         </div> 
-        <div id="video" class="content active">
+        <div id="video" class="content active bg-white">
           <div
             class="sm:w-[70%] w-[80%] text-center h-[20vh] sm:h-[80vh] mb-20 m-auto p-2 video-section"
           >
             <p
-              class="text-white text-xl sm:text-2xl font-semibold tracking-wide mb-4"
+              class="text-black text-xl sm:text-2xl font-semibold tracking-wide mb-4"
             >
               Isa
             </p><iframe src="https://drive.google.com/file/d/1xL5Jl0qnPROetlL1ae7vlOc5k4NLU-e-/preview" width="100%" height="100%" allow="autoplay"></iframe>
@@ -344,7 +344,7 @@
             class="sm:w-[70%] w-[80%] text-center h-[20vh] sm:h-[80vh] mb-20 m-auto p-2 video-section"
           >
             <p
-              class="text-white text-xl sm:text-2xl font-semibold tracking-wide mb-4"
+              class="text-black text-xl sm:text-2xl font-semibold tracking-wide mb-4"
             >
              Sofia
             </p>
@@ -355,7 +355,7 @@
             class="sm:w-[70%] w-[80%] text-center h-[20vh] sm:h-[80vh] mb-20 m-auto p-2 video-section"
           >
             <p
-              class="text-white text-xl sm:text-2xl font-semibold tracking-wide mb-4"
+              class="text-black text-xl sm:text-2xl font-semibold tracking-wide mb-4"
             >
               Geovana
             </p>
@@ -365,16 +365,16 @@
         </div> 
         </div>  
         <div id="imagem" class="content">
-          <section class="bg-neutral-900 p-4 text-center">
+          <section class="p-4 bg-white text-center">
             <div class="video-section">
               <p
-                class="text-white text-xl sm:text-2xl font-semibold tracking-wide mb-4 mt-8"
+                class="text-black text-xl sm:text-2xl font-semibold tracking-wide mb-4 mt-8"
               >
                 Ensaios fotográfico
               </p>
             </div>
 
-              <section class="bg-neutral-900 p-4 text-center">
+              <section class="bg-white p-4 text-center">
           <section
             class="flex flex-wrap justify-center items-center gap-5 w-full px-4 py-10"
           >
