--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                       </div>
                     </div>
                   </a>
-                   <a href="debutantes.html" class="service-link">
+                   <a href="Gastro.html" class="service-link">
                     <div class="service-content-wrapper">
                       <div class="service-content-block Gastro  p-0 w-full  ">
                         <div class="">
