--- a/debutantes.html
+++ b/debutantes.html
@@ -25,7 +25,7 @@
     />
       <style>
       body {
-        background-color: #121212;
+        background-color: #bb0606;
         color: #fff;
         font-family: sans-serif;
         text-align: center; 
@@ -168,7 +168,7 @@
                         class="nav-link w-inline-block"
                         ><div class="nav-link-block">
                           <div class="nav-text">Debutantes</div>
-                          <div class="nav-text is-hover">Debutantes</div>
+                          <div class="nav-text is-hover">Debutante</div>
                         </div>
                         <div class="link-underline-wrapper">
                           <div class="link-underline-item">
