--- a/index.html
+++ b/index.html
@@ -228,6 +228,9 @@
         </div>
       </div>
       <main class="main-wrapper">
+        <a href="https://wa.me/5551999509578?text=Ol%C3%A1%20Voian%2C%20Estou%20interessado%20em%20fazer%20um%20or%C3%A7amento." target="_blank" style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" style="width: 50px; height: 50px;">
+</a>
         <header
           class="section-home-header flex items-center justify-center min-h-screen relative"
         >
