--- a/Corporativo.html
+++ b/Corporativo.html
@@ -52,9 +52,9 @@
             <div class="w-layout-grid nav-component-grid">
               <div class="logo-wrap text-sm h-20">
                 <img
-                  src="images/Voin/Voian Co - Logo.gif"
+                  src="images/Voin/Icone-Anim.gif"
                   alt="Logo Voian Animado"
-                  class="service-icon h-auto"
+                  class="h-40 w-40"
                   decoding="async"
                 />
               </div>
@@ -73,11 +73,11 @@
                         data-w-id="b80e4bcc-650d-950d-9821-7930fbb222bc"
                         href="/"
                         class="nav-link w-inline-block h-40"
-                        ><div class="nav-link-block h-40">
+                        ><div class="nav-link-block h-40 m-0">
                           <img
-                            src="images/Voin/Voian-Logo Preto Sem Quadro.png"
+                            src="images/Voin/Logo-Anim.gif"
                             alt="Logo Voian"
-                            class="h-16 w-auto p-2"
+                            class="h-10 w-auto"
                           />
                         </div>
                       </a>
@@ -268,8 +268,10 @@
 
             <div class="mt-4 w-full">
               <p class="mt-4 text-lg text-white text-center">
-                Criamos experiências visuais que elevam sua presença ao
-                extraordinário.
+                Transformamos eventos corporativos em experiências memoráveis
+                <br />
+                com profissionalismo, criatividade e atenção aos mínimos
+                detalhes
               </p>
             </div>
           </div>
