--- a/Gastro.html
+++ b/Gastro.html
@@ -52,9 +52,9 @@
             <div class="w-layout-grid nav-component-grid">
               <div class="logo-wrap text-sm h-20">
                 <img
-                  src="images/Voin/Voian Co - Logo.gif"
+                  src="images/Voin/Icone-Anim.gif"
                   alt="Logo Voian Animado"
-                  class="service-icon h-auto"
+                  class="h-40 w-40"
                   decoding="async"
                 />
               </div>
@@ -73,19 +73,18 @@
                         data-w-id="b80e4bcc-650d-950d-9821-7930fbb222bc"
                         href="/"
                         class="nav-link w-inline-block h-40"
-                        ><div class="nav-link-block h-40">
+                        ><div class="nav-link-block h-40 m-0">
                           <img
-                            src="images/Voin/Voian-Logo Preto Sem Quadro.png"
+                            src="images/Voin/Logo-Anim.gif"
                             alt="Logo Voian"
-                            class="h-16 w-auto p-2"
+                            class="h-10 w-auto"
                           />
                         </div>
                       </a>
                     </div>
-                   
                   </div>
                   <div class="right-nav-menu">
-                     <div class="nav-link-overflow">
+                    <div class="nav-link-overflow">
                       <a
                         data-w-id="447c377d-665e-86f8-6f59-d53410cb7826"
                         href="/Wendding.html"
@@ -250,9 +249,9 @@
             </h1>
 
             <div class="mt-4 w-full">
-              <p class="mt-4 text-lg  text-center ">
-                Criamos experiências visuais que elevam sua presença ao
-                extraordinário.
+              <p class="mt-4 text-lg text-center">
+                Sabores que encantam, experiências que marcam <br />
+                Nossa gastronomia transforma eventos em momentos inesquecíveis
               </p>
             </div>
           </div>
@@ -291,7 +290,6 @@
                 <source src="images/Gastro/IMG_9216.mp4" type="video/mp4" />
               </video>
             </div>
-             
           </div>
         </section>
         <section class="bg-neutral-900 p-4 text-center">
