--- a/Wendding.html
+++ b/Wendding.html
@@ -110,10 +110,10 @@
           <div class="container-large">
             <div class="w-layout-grid nav-component-grid">
               <div class="logo-wrap text-sm h-20">
-                <img
-                  src="images/Voin/Voian Co - Logo.gif"
+               <img
+                  src="images/Voin/Icone-Anim.gif"
                   alt="Logo Voian Animado"
-                  class="service-icon h-auto"
+                  class="  h-40 w-40 "
                   decoding="async"
                 />
               </div>
@@ -132,11 +132,11 @@
                         data-w-id="b80e4bcc-650d-950d-9821-7930fbb222bc"
                         href="/"
                         class="nav-link w-inline-block h-40"
-                        ><div class="nav-link-block h-40">
+                        ><div class="nav-link-block h-40 m-0">
                           <img
-                            src="images/Voin/Voian-Logo Preto Sem Quadro.png"
+                            src="images/Voin/Logo-Anim.gif"
                             alt="Logo Voian"
-                            class="h-16 w-auto p-2"
+                            class="h-10 w-auto "
                           />
                         </div>
                       </a>
@@ -319,8 +319,7 @@
 
             <div class="mt-4 w-full">
               <p class="mt-4 text-lg text-white text-center">
-                Nós compartilhamos memórias <br />
-                com quem amamos para vida toda
+                Capturamos emoções reais com olhar artístico <br/> Fotografia de casamento que conta sua história com beleza e autenticidade
               </p>
             </div>
           </div>
