--- a/debutantes.html
+++ b/debutantes.html
@@ -109,9 +109,9 @@
             <div class="w-layout-grid nav-component-grid">
               <div class="logo-wrap text-sm h-20">
                 <img
-                  src="images/Voin/Voian Co - Logo.gif"
+                  src="images/Voin/Icone-Anim.gif"
                   alt="Logo Voian Animado"
-                  class="service-icon h-auto"
+                  class="  h-40 w-40 "
                   decoding="async"
                 />
               </div>
@@ -126,15 +126,15 @@
                 <div class="nav-menu-content">
                   <div class="left-nav-menu">
                     <div class="nav-link-overflow sm:hidden m-8">
-                      <a
+                     <a
                         data-w-id="b80e4bcc-650d-950d-9821-7930fbb222bc"
                         href="/"
                         class="nav-link w-inline-block h-40"
-                        ><div class="nav-link-block h-40">
+                        ><div class="nav-link-block h-40 m-0">
                           <img
-                            src="images/Voin/Voian-Logo Preto Sem Quadro.png"
+                            src="images/Voin/Logo-Anim.gif"
                             alt="Logo Voian"
-                            class="h-16 w-auto p-2"
+                            class="h-10 w-auto "
                           />
                         </div>
                       </a>
@@ -317,8 +317,8 @@
 
             <div class="mt-4 w-full">
               <p class="mt-4 text-lg text-white text-center">
-                Nós criamos <br />
-                memórias para a vida toda
+          
+                Mais que uma festa, um capítulo inesquecível      <br /> Criamos memórias para a debutante brilhar além do grande dia
               </p>
             </div>
           </div>
