--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
           <div class="container-large">
             <div class="w-layout-grid nav-component-grid">
               <div class="logo-wrap text-sm h-20">
+                 
                 <img
-                  src="images/Voin/Voian-Simbolo-removebg-preview.png"
+                  src="images/Voin/Icone-Anim.gif"
                   alt="Logo Voian Animado"
-                  class="service-icon h-auto"
+                  class="  h-40 w-40 "
                   decoding="async"
                 />
               </div> 
@@ -70,11 +71,11 @@
                         data-w-id="b80e4bcc-650d-950d-9821-7930fbb222bc"
                         href="/"
                         class="nav-link w-inline-block h-40"
-                        ><div class="nav-link-block h-40">
+                        ><div class="nav-link-block h-40 m-0">
                           <img
-                            src="images/Voin/Voian-Logo Preto Sem Quadro.png"
+                            src="images/Voin/Logo-Anim.gif"
                             alt="Logo Voian"
-                            class="h-16 w-auto p-2"
+                            class="h-10 w-auto "
                           />
                         </div>
                       </a>
@@ -253,7 +254,7 @@
             class="heading-wrapper text-center pt-[60%] sm:pt-[20%] h-40 w-[40]"
           >
             <img
-                  src="images/Voin/Voian Co - Logo.gif"
+                  src="images/Voin/Logo-Anim.gif"
                   alt="Logo Voian Animado"
                   class="  mt-40 w-80 "
                   decoding="async"
