--- a/Corporativo.html
+++ b/Corporativo.html
@@ -47,17 +47,26 @@
         role="banner"
         class="navbar w-nav"
       >
+       <div
+        id="top"
+        data-animation="default"
+        data-collapse="medium"
+        data-duration="0"
+        data-easing="ease"
+        data-easing2="ease"
+        role="banner"
+        class="navbar w-nav"
+      >
         <div class="padding-global">
           <div class="container-large">
             <div class="w-layout-grid nav-component-grid">
-              <div class="logo-wrap text-sm h-20">
-                <img
-                  src="images/Voin/Icone-Anim.gif"
-                  alt="Logo Voian Animado"
-                  class="h-40 w-40"
-                  decoding="async"
-                />
-              </div>
+              <img
+                src="images/Voin/Icone-Anim.gif"
+                alt="Logo Voian Animado"
+                class="h-30 w-30"
+                decoding="async"
+              />
+
               <nav
                 role="navigation"
                 id="w-node-_016c42d0-27ae-d0d7-3914-01d3df01ab64-df01ab5a"
@@ -233,16 +242,8 @@
         <header
           class="section-home-header flex items-center justify-center min-h-screen relative"
         >
-          <a
-            href="https://wa.me/5551999509578?text=Ol%C3%A1%20Voian%2C%20Estou%20interessado%20em%20fazer%20um%20or%C3%A7amento."
-            target="_blank"
-            style="position: fixed; bottom: 20px; right: 20px; z-index: 1000"
-          >
-            <img
-              src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg"
-              alt="WhatsApp"
-              style="width: 50px; height: 50px"
-            />
+           <a href="https://wa.me/5551999509578?text=Ol%C3%A1%20Voian%2C%20Estou%20interessado%20em%20fazer%20um%20or%C3%A7amento." target="_blank" style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;">
+            <img src="images//Home/whsts-removebg-preview.png" alt="WhatsApp" style="width: 50px; height: 50px;">
           </a>
           <video
             autoplay
@@ -267,12 +268,12 @@
             </h1>
 
             <div class="mt-4 w-full">
-              <p class="mt-4 text-lg text-white text-center">
+              <div class="mt-4 m-10 text-xl   text-neutral-100">
                 Transformamos eventos corporativos em experiências memoráveis
                 <br />
                 com profissionalismo, criatividade e atenção aos mínimos
                 detalhes
-              </p>
+              </div>
             </div>
           </div>
         </header>
@@ -383,43 +384,36 @@
               <div class="cta-content-wrapper">
                 <div class="padding-global">
                   <div class="max-width-xlarge align-center">
-                    <h2 class="cta-title">
-                      <span class="asterisk">*</span><br />Vamos
-                      <span class="featured">Fazer</span> <br />suas ideias
+                    <h2 class="cta-title ">
+                      <span class="asterisk"></span><br />Vamos 
+
+                      <span class="featured">transformar </span> <br />o seu sonho em um filme inesquecível
                     </h2>
                   </div>
                   <div class="max-width-medium align-center">
                     <div class="text-align-center">
                       <p class="text-size-regular text-color-alternate">
-                        Pronto para compartilhar sua narrativa única com o
-                        mundo? Entre em contato e vamos dar vida à história da
-                        sua marca.
+                        Pronto para compartilhar sua narrativa única com o mundo? Entre em contato e vamos dar vida à história da sua marca.
                       </p>
                     </div>
                   </div>
                   <div class="max-width-xlarge align-center"></div>
                   <div class="spacer-small"></div>
+                    
                 </div>
-                <div class="bg-green-500">
-                  <a
-                    href="https://wa.me/5551999509578?text=Olá%20Voian%2C%20quero%20fazer%20um%20orçamento"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    class="flex items-center gap-2 bg-green-500 text-white px-4 py-2 rounded-lg hover:bg-green-600 transition"
-                  >
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      class="w-5 h-5 fill-current"
-                      viewBox="0 0 32 32"
-                    >
-                      <path
-                        d="M16.003 2.003c-7.732 0-14 6.268-14 14 0 2.472.648 4.84 1.88 6.94L2 30l7.26-1.88a13.93 13.93 0 006.743 1.72h.003c7.732 0 14-6.268 14-14s-6.268-14-14-14zm0 25.5a11.5 11.5 0 01-5.86-1.58l-.42-.25-4.31 1.11 1.15-4.2-.27-.43a11.47 11.47 0 01-1.77-6.1c0-6.34 5.16-11.5 11.5-11.5s11.5 5.16 11.5 11.5-5.16 11.5-11.5 11.5zm6.29-8.62c-.34-.17-2.01-.99-2.32-1.1-.31-.11-.54-.17-.77.17s-.89 1.1-1.09 1.33c-.2.23-.4.26-.74.09-.34-.17-1.43-.53-2.72-1.7-1.01-.9-1.69-2-1.89-2.34-.2-.34-.02-.52.15-.69.15-.15.34-.4.51-.6.17-.2.23-.34.34-.57.11-.23.06-.43-.03-.6-.09-.17-.77-1.86-1.06-2.55-.28-.68-.57-.59-.77-.6h-.66c-.23 0-.6.09-.91.43s-1.2 1.17-1.2 2.85 1.23 3.3 1.4 3.53c.17.23 2.42 3.7 5.87 5.19.82.35 1.46.56 1.96.72.82.26 1.57.22 2.16.13.66-.1 2.01-.82 2.3-1.61.28-.79.28-1.47.2-1.61-.09-.14-.31-.23-.66-.4z"
-                      />
-                    </svg>
-                    Nós contate
-                  </a>
-                </div>
+                 <div class="bg-green-500"  >
+                     <a href="https://wa.me/5551999509578?text=Olá%20Voian%2C%20quero%20fazer%20um%20orçamento"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        class="flex items-center gap-2 bg-green-500 text-white px-4 py-2 rounded-lg hover:bg-green-600 transition">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 fill-current" viewBox="0 0 32 32">
+                          <path d="M16.003 2.003c-7.732 0-14 6.268-14 14 0 2.472.648 4.84 1.88 6.94L2 30l7.26-1.88a13.93 13.93 0 006.743 1.72h.003c7.732 0 14-6.268 14-14s-6.268-14-14-14zm0 25.5a11.5 11.5 0 01-5.86-1.58l-.42-.25-4.31 1.11 1.15-4.2-.27-.43a11.47 11.47 0 01-1.77-6.1c0-6.34 5.16-11.5 11.5-11.5s11.5 5.16 11.5 11.5-5.16 11.5-11.5 11.5zm6.29-8.62c-.34-.17-2.01-.99-2.32-1.1-.31-.11-.54-.17-.77.17s-.89 1.1-1.09 1.33c-.2.23-.4.26-.74.09-.34-.17-1.43-.53-2.72-1.7-1.01-.9-1.69-2-1.89-2.34-.2-.34-.02-.52.15-.69.15-.15.34-.4.51-.6.17-.2.23-.34.34-.57.11-.23.06-.43-.03-.6-.09-.17-.77-1.86-1.06-2.55-.28-.68-.57-.59-.77-.6h-.66c-.23 0-.6.09-.91.43s-1.2 1.17-1.2 2.85 1.23 3.3 1.4 3.53c.17.23 2.42 3.7 5.87 5.19.82.35 1.46.56 1.96.72.82.26 1.57.22 2.16.13.66-.1 2.01-.82 2.3-1.61.28-.79.28-1.47.2-1.61-.09-.14-.31-.23-.66-.4z"/>
+                        </svg>
+                        Nós contate
+                      </a>
+                    </div>
               </div>
+             
               <div class="cta-image-wrapper">
                 <img
                   src="images/67cc4570937dc69a6b539638_Frame%208.png"
